Fixed the styling and formatting of the docs

--- a/manual/cypher/cypher-docs/src/docs/dev/general/parameters.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/general/parameters.asciidoc
@@ -5,7 +5,7 @@ Cypher supports querying with parameters.
 This means developers don't have to resort to string building to create a query.
 In addition to that, it also makes caching of execution plans much easier for Cypher.
 
-Parameters can be used for literals and expressions in the +WHERE+ clause, for the index value in the +START+ clause, index queries, and finally for node/relationship ids.
+Parameters can be used for literals and expressions in the `WHERE` clause, for the index value in the `START` clause, index queries, and finally for node/relationship ids.
 Parameters can not be used as for property names, relationship types and labels, since these patterns are part of the query structure that is compiled into a query plan.
 
 Accepted names for parameters are letters and numbers, and any combination of these.
@@ -53,7 +53,7 @@ include::includes/set_properties_on_a_node_from_a_map.asciidoc[]
 
 include::includes/exampleWithParameterForSkipLimit.asciidoc[]
 
-== Node id == 
+== Node id ==
 
 include::includes/exampleWithParameterForNodeId.asciidoc[]
 
