--- a/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/cypher/labels.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/cypher/labels.asciidoc
@@ -4,7 +4,7 @@ Labels are a convenient way to group nodes together.
 They are used to restrict queries, define constraints and create indexes.
 
 The following will give an example of how to use labels.
-Let's start out adding a constraint -- in this case we decided that all +Movie+ node ++title++s should be unique.
+Let's start out adding a constraint -- in this case we decided that all `Movie` node `title`s should be unique.
 
 [source,cypher]
 ----
@@ -41,8 +41,8 @@ Now, let's add some data.
 
 [source,cypher]
 ----
-CREATE (actor:Actor {name:"Tom Hanks"}),
-  (movie:Movie {title:'Sleepless in Seattle'}),
+CREATE (actor:Actor {name: 'Tom Hanks'}),
+  (movie:Movie {title: 'Sleepless in Seattle'}),
   (actor)-[:ACTED_IN]->(movie);
 ----
 
@@ -60,7 +60,7 @@ This means we can simply look up the Tom Hanks node, and the index will kick in 
 
 [source,cypher]
 ----
-MATCH (actor:Actor {name: "Tom Hanks"})
+MATCH (actor:Actor {name: 'Tom Hanks'})
 RETURN actor;
 ----
 
@@ -75,7 +75,7 @@ Here's how to do that:
 
 [source,cypher]
 ----
-MATCH (actor:Actor {name: "Tom Hanks"})
+MATCH (actor:Actor {name: 'Tom Hanks'})
 SET actor :American;
 ----
 
@@ -88,7 +88,7 @@ To remove a label from nodes, this is what to do:
 
 [source,cypher]
 ----
-MATCH (actor:Actor {name: "Tom Hanks"})
+MATCH (actor:Actor {name: 'Tom Hanks'})
 REMOVE actor:American;
 ----
 
