--- a/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/cypher/movie-db.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/cypher/movie-db.asciidoc
@@ -1,28 +1,28 @@
 = Movie Database =
 
 Our example graph consists of movies with title and year and actors with a name.
-Actors have +ACTS_IN+ relationships to movies, which represents the role they played.
+Actors have `ACTS_IN` relationships to movies, which represents the role they played.
 This relationship also has a role attribute.
 
 We'll go with three movies and three actors:
 
 [source,cypher]
 ----
-CREATE (matrix1:Movie {title : 'The Matrix', year : '1999-03-31'})
-CREATE (matrix2:Movie {title : 'The Matrix Reloaded', year : '2003-05-07'})
-CREATE (matrix3:Movie {title : 'The Matrix Revolutions', year : '2003-10-27'})
-CREATE (keanu:Actor {name:'Keanu Reeves'})
-CREATE (laurence:Actor {name:'Laurence Fishburne'})
-CREATE (carrieanne:Actor {name:'Carrie-Anne Moss'})
-CREATE (keanu)-[:ACTS_IN {role : 'Neo'}]->(matrix1)
-CREATE (keanu)-[:ACTS_IN {role : 'Neo'}]->(matrix2)
-CREATE (keanu)-[:ACTS_IN {role : 'Neo'}]->(matrix3)
-CREATE (laurence)-[:ACTS_IN {role : 'Morpheus'}]->(matrix1)
-CREATE (laurence)-[:ACTS_IN {role : 'Morpheus'}]->(matrix2)
-CREATE (laurence)-[:ACTS_IN {role : 'Morpheus'}]->(matrix3)
-CREATE (carrieanne)-[:ACTS_IN {role : 'Trinity'}]->(matrix1)
-CREATE (carrieanne)-[:ACTS_IN {role : 'Trinity'}]->(matrix2)
-CREATE (carrieanne)-[:ACTS_IN {role : 'Trinity'}]->(matrix3)
+CREATE (matrix1:Movie {title: 'The Matrix', year: '1999-03-31'})
+CREATE (matrix2:Movie {title: 'The Matrix Reloaded', year: '2003-05-07'})
+CREATE (matrix3:Movie {title: 'The Matrix Revolutions', year: '2003-10-27'})
+CREATE (keanu:Actor {name: 'Keanu Reeves'})
+CREATE (laurence:Actor {name: 'Laurence Fishburne'})
+CREATE (carrieanne:Actor {name: 'Carrie-Anne Moss'})
+CREATE (keanu)-[:ACTS_IN {role: 'Neo'}]->(matrix1)
+CREATE (keanu)-[:ACTS_IN {role: 'Neo'}]->(matrix2)
+CREATE (keanu)-[:ACTS_IN {role: 'Neo'}]->(matrix3)
+CREATE (laurence)-[:ACTS_IN {role: 'Morpheus'}]->(matrix1)
+CREATE (laurence)-[:ACTS_IN {role: 'Morpheus'}]->(matrix2)
+CREATE (laurence)-[:ACTS_IN {role: 'Morpheus'}]->(matrix3)
+CREATE (carrieanne)-[:ACTS_IN {role: 'Trinity'}]->(matrix1)
+CREATE (carrieanne)-[:ACTS_IN {role: 'Trinity'}]->(matrix2)
+CREATE (carrieanne)-[:ACTS_IN {role: 'Trinity'}]->(matrix3)
 ----
 
 [source,querytest]
@@ -43,7 +43,7 @@ Let's check how many nodes we have now:
 [source,cypher]
 ----
 MATCH (n)
-RETURN "Hello Graph with " + count(*) + " Nodes!" AS welcome;
+RETURN 'Hello Graph with ' + count(*) + ' Nodes!' AS welcome;
 ----
 
 [source,querytest]
@@ -118,7 +118,7 @@ Get only the actors whose names end with ``s'':
 [source,cypher]
 ----
 MATCH (actor:Actor)
-WHERE actor.name =~ ".*s$" 
+WHERE actor.name =~ '.*s$'
 RETURN actor.name;
 ----
 
