--- a/manual/cypher/cypher-docs/src/docs/graphgists/intro/compose-statements.adoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/intro/compose-statements.adoc
@@ -4,13 +4,13 @@ Let's first get some data in to retrieve results from:
 
 [source,cypher]
 ----
-CREATE (matrix:Movie {title:"The Matrix",released:1997})
-CREATE (cloudAtlas:Movie {title:"Cloud Atlas",released:2012})
-CREATE (forrestGump:Movie {title:"Forrest Gump",released:1994})
-CREATE (keanu:Person {name:"Keanu Reeves", born:1964})
-CREATE (robert:Person {name:"Robert Zemeckis", born:1951})
-CREATE (tom:Person {name:"Tom Hanks", born:1956})
-CREATE (tom)-[:ACTED_IN {roles:["Forrest"]}]->(forrestGump)
+CREATE (matrix:Movie {title: 'The Matrix', released:1997})
+CREATE (cloudAtlas:Movie {title: 'Cloud Atlas', released:2012})
+CREATE (forrestGump:Movie {title: 'Forrest Gump', released:1994})
+CREATE (keanu:Person {name: 'Keanu Reeves', born: 1964})
+CREATE (robert:Person {name: 'Robert Zemeckis', born: 1951})
+CREATE (tom:Person {name: 'Tom Hanks', born: 1956})
+CREATE (tom)-[:ACTED_IN {roles:['Forrest']}]->(forrestGump)
 CREATE (tom)-[:ACTED_IN {roles:['Zachry']} ]->(cloudAtlas)
 CREATE (robert)-[:DIRECTED]->(forrestGump)
 ----
