--- a/manual/cypher/cypher-docs/src/docs/graphgists/intro/loading-data.adoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/intro/loading-data.adoc
@@ -36,10 +36,10 @@ For instance to create a movie graph from JSON data structures pulled from an AP
 [source,cypher,hideexec=true]
 ----
 UNWIND {movies} as movie
-MERGE (m:Movie {title:movie.title}) ON CREATE SET m.released = movie.released
+MERGE (m:Movie {title: movie.title}) ON CREATE SET m.released = movie.released
 FOREACH (role IN movie.cast |
-   MERGE (a:Person {name:role.actor.name}) ON CREATE SET a.born = role.actor.born
-   MERGE (a)-[:ACTED_IN {roles:role.characters}]->(m)
+   MERGE (a:Person {name: role.actor.name}) ON CREATE SET a.born = role.actor.born
+   MERGE (a)-[:ACTED_IN {roles: role.characters}]->(m)
 )
 ----
 
@@ -63,7 +63,7 @@ include::../../graphgists/intro/movies.csv[]
 
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "movies.csv" AS line
+LOAD CSV WITH HEADERS FROM 'movies.csv' AS line
 CREATE (m:Movie {id:line.id,title:line.title, released:toInt(line.year)});
 ----
 
@@ -75,7 +75,7 @@ include::../../graphgists/intro/persons.csv[]
 
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "persons.csv" AS line
+LOAD CSV WITH HEADERS FROM 'persons.csv' AS line
 MERGE (a:Person {id:line.id}) ON CREATE SET a.name=line.name;
 ----
 
@@ -87,7 +87,7 @@ include::../../graphgists/intro/roles.csv[]
 
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "roles.csv" AS line
+LOAD CSV WITH HEADERS FROM 'roles.csv' AS line
 MATCH (m:Movie {id:line.movieId})
 MATCH (a:Person {id:line.personId})
 CREATE (a)-[:ACTED_IN {roles:[line.role]}]->(m);
@@ -107,10 +107,10 @@ include::../../graphgists/intro/movie_actor_roles.csv[]
 
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "movie_actor_roles.csv" AS line FIELDTERMINATOR ";"
-MERGE (m:Movie {title:line.title}) ON CREATE SET m.released = toInt(line.released)
-MERGE (a:Person {name:line.actor}) ON CREATE SET a.born = toInt(line.born)
-MERGE (a)-[:ACTED_IN {roles:split(line.characters,",") }]->(m)
+LOAD CSV WITH HEADERS FROM 'movie_actor_roles.csv' AS line FIELDTERMINATOR ';'
+MERGE (m:Movie {title: line.title}) ON CREATE SET m.released = toInt(line.released)
+MERGE (a:Person {name: line.actor}) ON CREATE SET a.born = toInt(line.born)
+MERGE (a)-[:ACTED_IN {roles:split(line.characters,',') }]->(m)
 ----
 
 //graph
