--- a/manual/cypher/cypher-docs/src/docs/dev/general/introduction.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/general/introduction.asciidoc
@@ -18,7 +18,7 @@ This is in contrast to imperative languages like Java, scripting languages like 
 This approach makes query optimization an implementation detail instead of burdening the user with it and requiring her to update all traversals just because the physical database structure has changed (new indexes etc.).
 
 Cypher is inspired by a number of different approaches and builds upon established practices for expressive querying.
-Most of the keywords like +WHERE+ and +ORDER BY+ are inspired by http://en.wikipedia.org/wiki/SQL[SQL].
+Most of the keywords like `WHERE` and `ORDER BY` are inspired by http://en.wikipedia.org/wiki/SQL[SQL].
 Pattern matching borrows expression approaches from http://en.wikipedia.org/wiki/SPARQL[SPARQL].
 Some of the collection semantics have been borrowed from languages such as Haskell and Python.
 
@@ -29,32 +29,32 @@ Some of the collection semantics have been borrowed from languages such as Haske
 Cypher borrows its structure from SQL -- queries are built up using various clauses.
 
 Clauses are chained together, and the they feed intermediate result sets between each other.
-For example, the matching variables from one +MATCH+ clause will be the context that the next clause exists in.
+For example, the matching variables from one `MATCH` clause will be the context that the next clause exists in.
 
 The query language is comprised of several distinct clauses.
 You can read more details about them later in the manual.
 
 Here are a few clauses used to read from the graph:
 
-* +MATCH+: The graph pattern to match.
+* `MATCH`: The graph pattern to match.
   This is the most common way to get data from the graph.
 
-* +WHERE+: Not a clause in its own right, but rather part of +MATCH+, +OPTIONAL MATCH+ and +WITH+.
-  Adds constraints to a pattern, or filters the intermediate result passing through +WITH+.
+* `WHERE`: Not a clause in its own right, but rather part of `MATCH`, `OPTIONAL MATCH` and `WITH`.
+  Adds constraints to a pattern, or filters the intermediate result passing through `WITH`.
 
-* +RETURN+: What to return.
+* `RETURN`: What to return.
 
-Let's see +MATCH+ and +RETURN+ in action.
+Let's see `MATCH` and `RETURN` in action.
 
 include::intro-examples.asciidoc[]
 
 And here are examples of clauses that are used to update the graph:
 
-* +CREATE+ (and +DELETE+): Create (and delete) nodes and relationships.
+* `CREATE` (and `DELETE`): Create (and delete) nodes and relationships.
 
-* +SET+ (and +REMOVE+): Set values to properties and add labels on nodes using +SET+ and use +REMOVE+ to remove them.
+* `SET` (and `REMOVE`): Set values to properties and add labels on nodes using `SET` and use `REMOVE` to remove them.
 
-* +MERGE+: Match existing or create new nodes and patterns. This is especially useful together with uniqueness constraints.
+* `MERGE`: Match existing or create new nodes and patterns. This is especially useful together with uniqueness constraints.
 
 
 For more Cypher examples, see <<data-modeling-examples>> as well as the rest of the Cypher part with details on the language.
