--- a/manual/cypher/cypher-docs/src/docs/dev/ql/syntax/index.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/ql/syntax/index.asciidoc
@@ -1,7 +1,7 @@
 [[query-syntax-case]]
 == Case Expressions ==
-Cypher supports +CASE+ expressions, which is a generic conditional expression, similar to if/else statements in other languages.
-Two variants of +CASE+ exist -- the simple form and the generic form.
+Cypher supports `CASE` expressions, which is a generic conditional expression, similar to if/else statements in other languages.
+Two variants of `CASE` exist -- the simple form and the generic form.
 
 :leveloffset: 2
 
