--- a/manual/cypher/cypher-docs/src/docs/dev/syntax/variables.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/syntax/variables.asciidoc
@@ -15,7 +15,7 @@ The variables are `n` and `b`.
 
 Variable names are case sensitive, and can contain underscores and alphanumeric characters (a-z, 0-9), but must
 always start with a letter.
-If other characters are needed, you can quote the variable using backquote (+`+) signs.
+If other characters are needed, you can quote the variable using backquote (```) signs.
 
 The same rules apply to property names.
 
