--- a/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/modeling/tvshows.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/tutorials/gists/modeling/tvshows.asciidoc
@@ -40,17 +40,17 @@ Let's create some data and see how the domain plays out in practice:
 //setup
 [source,cypher]
 ----
-CREATE (himym:TVShow {name: "How I Met Your Mother"})
-CREATE (himym_s1:Season {name: "HIMYM Season 1"})
-CREATE (himym_s1_e1:Episode {name: "Pilot"})
-CREATE (ted:Character {name: "Ted Mosby"})
-CREATE (joshRadnor:Actor {name: "Josh Radnor"})
+CREATE (himym:TVShow {name: 'How I Met Your Mother'})
+CREATE (himym_s1:Season {name: 'HIMYM Season 1'})
+CREATE (himym_s1_e1:Episode {name: 'Pilot'})
+CREATE (ted:Character {name: 'Ted Mosby'})
+CREATE (joshRadnor:Actor {name: 'Josh Radnor'})
 CREATE UNIQUE (joshRadnor)-[:PLAYED_CHARACTER]->(ted)
 CREATE UNIQUE (himym)-[:HAS_SEASON]->(himym_s1)
 CREATE UNIQUE (himym_s1)-[:HAS_EPISODE]->(himym_s1_e1)
 CREATE UNIQUE (himym_s1_e1)-[:FEATURED_CHARACTER]->(ted)
-CREATE (himym_s1_e1_review1 {title: "Meet Me At The Bar In 15 Minutes & Suit Up", content: "It was awesome"})
-CREATE (wakenPayne:User {name: "WakenPayne"})
+CREATE (himym_s1_e1_review1 {title: 'Meet Me At The Bar In 15 Minutes & Suit Up', content: 'It was awesome'})
+CREATE (wakenPayne:User {name: 'WakenPayne'})
 CREATE (wakenPayne)-[:WROTE_REVIEW]->(himym_s1_e1_review1)<-[:HAS_REVIEW]-(himym_s1_e1)
 ----
 
@@ -72,18 +72,18 @@ Now let's add more data:
 
 [source,cypher]
 ----
-MATCH (himym:TVShow {name: "How I Met Your Mother"}), 
+MATCH (himym:TVShow {name: 'How I Met Your Mother'}),
        (himym_s1:Season),
-       (himym_s1_e1:Episode {name: "Pilot"}),
+       (himym_s1_e1:Episode {name: 'Pilot'}),
        (himym)-[:HAS_SEASON]->(himym_s1)-[:HAS_EPISODE]->(himym_s1_e1)
-CREATE (marshall:Character {name: "Marshall Eriksen"})
-CREATE (robin:Character {name: "Robin Scherbatsky"})
-CREATE (barney:Character {name: "Barney Stinson"})
-CREATE (lily:Character {name: "Lily Aldrin"})
-CREATE (jasonSegel:Actor {name: "Jason Segel"})
-CREATE (cobieSmulders:Actor {name: "Cobie Smulders"})
-CREATE (neilPatrickHarris:Actor {name: "Neil Patrick Harris"})
-CREATE (alysonHannigan:Actor {name: "Alyson Hannigan"})
+CREATE (marshall:Character {name: 'Marshall Eriksen'})
+CREATE (robin:Character {name: 'Robin Scherbatsky'})
+CREATE (barney:Character {name: 'Barney Stinson'})
+CREATE (lily:Character {name: 'Lily Aldrin'})
+CREATE (jasonSegel:Actor {name: 'Jason Segel'})
+CREATE (cobieSmulders:Actor {name: 'Cobie Smulders'})
+CREATE (neilPatrickHarris:Actor {name: 'Neil Patrick Harris'})
+CREATE (alysonHannigan:Actor {name: 'Alyson Hannigan'})
 CREATE UNIQUE (jasonSegel)-[:PLAYED_CHARACTER]->(marshall)
 CREATE UNIQUE (cobieSmulders)-[:PLAYED_CHARACTER]->(robin)
 CREATE UNIQUE (neilPatrickHarris)-[:PLAYED_CHARACTER]->(barney)
@@ -92,8 +92,8 @@ CREATE UNIQUE (himym_s1_e1)-[:FEATURED_CHARACTER]->(marshall)
 CREATE UNIQUE (himym_s1_e1)-[:FEATURED_CHARACTER]->(robin)
 CREATE UNIQUE (himym_s1_e1)-[:FEATURED_CHARACTER]->(barney)
 CREATE UNIQUE (himym_s1_e1)-[:FEATURED_CHARACTER]->(lily)
-CREATE (himym_s1_e1_review2 {title: "What a great pilot for a show :)", content: "The humour is great."})
-CREATE (atlasredux:User {name: "atlasredux"})
+CREATE (himym_s1_e1_review2 {title: 'What a great pilot for a show :)', content: 'The humour is great.'})
+CREATE (atlasredux:User {name: 'atlasredux'})
 CREATE (atlasredux)-[:WROTE_REVIEW]->(himym_s1_e1_review2)<-[:HAS_REVIEW]-(himym_s1_e1)
 ----
 
@@ -111,7 +111,7 @@ For a particular TV show, show  all the seasons and all the episodes and all the
 [source,cypher]
 ----
 MATCH (tvShow:TVShow)-[:HAS_SEASON]->(season)-[:HAS_EPISODE]->(episode)
-WHERE tvShow.name = "How I Met Your Mother"
+WHERE tvShow.name = 'How I Met Your Mother'
 RETURN season.name, episode.name
 ----
 
@@ -129,7 +129,7 @@ We could also grab the reviews if there are any by slightly tweaking the query:
 [source,cypher]
 ----
 MATCH (tvShow:TVShow)-[:HAS_SEASON]->(season)-[:HAS_EPISODE]->(episode)
-WHERE tvShow.name = "How I Met Your Mother"
+WHERE tvShow.name = 'How I Met Your Mother'
 WITH season, episode
 OPTIONAL MATCH (episode)-[:HAS_REVIEW]->(review)
 RETURN season.name, episode.name, review
@@ -154,8 +154,8 @@ The other nodes of the path pattern are designated by `()`.
 
 [source,cypher]
 ----
-MATCH (tvShow:TVShow)-[:HAS_SEASON]->()-[:HAS_EPISODE]->()-[:FEATURED_CHARACTER]->(character) 
-WHERE tvShow.name = "How I Met Your Mother" 
+MATCH (tvShow:TVShow)-[:HAS_SEASON]->()-[:HAS_EPISODE]->()-[:FEATURED_CHARACTER]->(character)
+WHERE tvShow.name = 'How I Met Your Mother'
 RETURN DISTINCT character.name
 ----
 
@@ -171,7 +171,7 @@ Now let's look at how to get all cast members of a show.
 [source,cypher]
 ----
 MATCH (tvShow:TVShow)-[:HAS_SEASON]->()-[:HAS_EPISODE]->(episode)-[:FEATURED_CHARACTER]->()<-[:PLAYED_CHARACTER]-(actor)
-WHERE tvShow.name = "How I Met Your Mother" 
+WHERE tvShow.name = 'How I Met Your Mother'
 RETURN DISTINCT actor.name
 ----
 
@@ -189,17 +189,17 @@ First let’s add another TV show that Josh Radnor appeared in:
 
 [source,cypher]
 ----
-CREATE (er:TVShow {name: "ER"})
-CREATE (er_s7:Season {name: "ER S7"})
-CREATE (er_s7_e17:Episode {name: "Peter's Progress"})
-CREATE (tedMosby:Character {name: "The Advocate "})
+CREATE (er:TVShow {name: 'ER'})
+CREATE (er_s7:Season {name: 'ER S7'})
+CREATE (er_s7_e17:Episode {name: 'Peter's Progress'})
+CREATE (tedMosby:Character {name: 'The Advocate'})
 CREATE UNIQUE (er)-[:HAS_SEASON]->(er_s7)
 CREATE UNIQUE (er_s7)-[:HAS_EPISODE]->(er_s7_e17)
 WITH er_s7_e17
 MATCH (actor:Actor), (episode:Episode)
-WHERE actor.name = "Josh Radnor" AND episode.name = "Peter's Progress"
+WHERE actor.name = 'Josh Radnor' AND episode.name = "Peter's Progress"
 WITH actor, episode
-CREATE (keith:Character {name: "Keith"})
+CREATE (keith:Character {name: 'Keith'})
 CREATE UNIQUE (actor)-[:PLAYED_CHARACTER]->(keith)
 CREATE UNIQUE (episode)-[:FEATURED_CHARACTER]->(keith)
 ----
@@ -216,7 +216,7 @@ And now we’ll create a query to find the episodes that he has appeared in:
 [source,cypher]
 ----
 MATCH (actor:Actor)-[:PLAYED_CHARACTER]->(character)<-[:FEATURED_CHARACTER]-(episode)
-WHERE actor.name = "Josh Radnor"
+WHERE actor.name = 'Josh Radnor'
 RETURN episode.name AS Episode, character.name AS Character
 ----
 
@@ -237,7 +237,7 @@ Now let's go for a similar query, but add the season and show to it as well.
 ----
 MATCH (actor:Actor)-[:PLAYED_CHARACTER]->(character)<-[:FEATURED_CHARACTER]-(episode),
      (episode)<-[:HAS_EPISODE]-(season)<-[:HAS_SEASON]-(tvshow)
-WHERE actor.name = "Josh Radnor"
+WHERE actor.name = 'Josh Radnor'
 RETURN tvshow.name AS Show, season.name AS Season, episode.name as Episode, character.name AS Character
 ----
 
