--- a/manual/cypher/cypher-docs/src/docs/graphgists/intro/data-structures.adoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/intro/data-structures.adoc
@@ -16,18 +16,18 @@ If you want more details on how the data is loaded, see <<cypher-intro-importing
 
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "movies.csv" AS line
-CREATE (m:Movie {id:line.id,title:line.title, released:toInt(line.year)});
-LOAD CSV WITH HEADERS FROM "persons.csv" AS line
-MERGE (a:Person {id:line.id}) ON CREATE SET a.name=line.name;
-LOAD CSV WITH HEADERS FROM "roles.csv" AS line
-MATCH (m:Movie {id:line.movieId})
-MATCH (a:Person {id:line.personId})
+LOAD CSV WITH HEADERS FROM 'movies.csv' AS line
+CREATE (m:Movie {id: line.id, title: line.title, released: toInt(line.year)});
+LOAD CSV WITH HEADERS FROM 'persons.csv' AS line
+MERGE (a:Person {id:line.id}) ON CREATE SET a.name = line.name;
+LOAD CSV WITH HEADERS FROM 'roles.csv' AS line
+MATCH (m:Movie {id: line.movieId})
+MATCH (a:Person {id: line.personId})
 CREATE (a)-[:ACTED_IN {roles:[line.role]}]->(m);
-LOAD CSV WITH HEADERS FROM "movie_actor_roles.csv" AS line FIELDTERMINATOR ";"
-MERGE (m:Movie {title:line.title}) ON CREATE SET m.released = toInt(line.released)
-MERGE (a:Person {name:line.actor}) ON CREATE SET a.born = toInt(line.born)
-MERGE (a)-[:ACTED_IN {roles:split(line.characters,",") }]->(m)
+LOAD CSV WITH HEADERS FROM 'movie_actor_roles.csv' AS line FIELDTERMINATOR ';'
+MERGE (m:Movie {title: line.title}) ON CREATE SET m.released = toInt(line.released)
+MERGE (a:Person {name: line.actor}) ON CREATE SET a.born = toInt(line.born)
+MERGE (a)-[:ACTED_IN {roles:split(line.characters,',') }]->(m)
 ----
 
 Now, let's try out data structures.
@@ -84,7 +84,7 @@ In a graph-query you can filter or aggregate collected values instead or work on
 ----
 MATCH (m:Movie)<-[r:ACTED_IN]-(a:Person)
 WITH m.title as movie, collect({name: a.name, roles: r.roles}) as cast
-RETURN movie, filter(actor IN cast WHERE actor.name STARTS WITH "M")
+RETURN movie, filter(actor IN cast WHERE actor.name STARTS WITH 'M')
 ----
 
 //table
