--- a/manual/cypher/cypher-docs/src/docs/graphgists/intro/getting-the-results-you-want.adoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/intro/getting-the-results-you-want.adoc
@@ -4,13 +4,13 @@ Let's first get some data in to retrieve results from:
 
 [source,cypher]
 ----
-CREATE (matrix:Movie {title:"The Matrix",released:1997})
-CREATE (cloudAtlas:Movie {title:"Cloud Atlas",released:2012})
-CREATE (forrestGump:Movie {title:"Forrest Gump",released:1994})
-CREATE (keanu:Person {name:"Keanu Reeves", born:1964})
-CREATE (robert:Person {name:"Robert Zemeckis", born:1951})
-CREATE (tom:Person {name:"Tom Hanks", born:1956})
-CREATE (tom)-[:ACTED_IN {roles:["Forrest"]}]->(forrestGump)
+CREATE (matrix:Movie {title: 'The Matrix', released: 1997})
+CREATE (cloudAtlas:Movie {title: 'Cloud Atlas', released: 2012})
+CREATE (forrestGump:Movie {title: 'Forrest Gump', released: 1994})
+CREATE (keanu:Person {name: 'Keanu Reeves', born: 1964})
+CREATE (robert:Person {name: 'Robert Zemeckis', born: 1951})
+CREATE (tom:Person {name: 'Tom Hanks', born: 1956})
+CREATE (tom)-[:ACTED_IN {roles:['Forrest']}]->(forrestGump)
 CREATE (tom)-[:ACTED_IN {roles:['Zachry']} ]->(cloudAtlas)
 CREATE (robert)-[:DIRECTED]->(forrestGump)
 ----
@@ -38,7 +38,7 @@ The simplest predicates are comparisons, especially equality.
 [source,cypher]
 ----
 MATCH (m:Movie)
-WHERE m.title = "The Matrix"
+WHERE m.title = 'The Matrix'
 RETURN m
 ----
 
@@ -53,7 +53,7 @@ For equality on one or more properties, a more compact syntax can be used as wel
 
 [source,cypher]
 ----
-MATCH (m:Movie {title: "The Matrix"})
+MATCH (m:Movie {title: 'The Matrix'})
 RETURN m
 ----
 
@@ -69,9 +69,9 @@ The `WHERE` clause below includes a regular expression match, a greater than com
 [source,cypher]
 ----
 MATCH (p:Person)-[r:ACTED_IN]->(m:Movie)
-WHERE p.name =~ "K.+"
+WHERE p.name =~ 'K.+'
    OR m.released > 2000
-   OR "Neo" IN r.roles
+   OR 'Neo' IN r.roles
 RETURN p,r,m
 ----
 
@@ -110,10 +110,10 @@ So far we've returned only nodes, relationships, or paths directly via their var
 But the `RETURN` clause can actually return any number of expressions.
 But what are actually expressions in Cypher?
 
-The simplest expressions are literal values like numbers, strings and arrays as `[1,2,3]`, and maps like `{name:"Tom Hanks", born:1964, movies:["Forrest Gump", ...], count:13}`.
+The simplest expressions are literal values like numbers, strings and arrays as `[1,2,3]`, and maps like `{name: 'Tom Hanks', born: 1964, movies:['Forrest Gump', ...], count: 13}`.
 You can access individual properties of any node, relationship, or map with a dot-syntax like `n.name`.
 Individual elements or slices of arrays can be retrieved with subscripts like `names[0]` or `movies[1..-1]`.
-Each function evaluation like `length(array)`, `toInt("12")`, `substring("2014-07-01",0,4)`, or `coalesce(p.nickname,"n/a")` is also an expression.
+Each function evaluation like `length(array)`, `toInt("12")`, `substring("2014-07-01",0,4)`, or `coalesce(p.nickname,'n/a')` is also an expression.
 
 Predicates that you'd use in `WHERE` count as boolean expressions.
 
@@ -125,7 +125,7 @@ You can later on refer to that column using its alias.
 [source,cypher]
 ----
 MATCH (p:Person)
-RETURN p, p.name AS name, upper(p.name), coalesce(p.nickname,"n/a") AS nickname, {name: p.name, label:head(labels(p))} AS person
+RETURN p, p.name AS name, upper(p.name), coalesce(p.nickname,'n/a') AS nickname, {name: p.name, label:head(labels(p))} AS person
 ----
 
 //table
