--- a/manual/cypher/cypher-docs/src/docs/graphgists/query-tuning/advanced-query-tuning-example.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/query-tuning/advanced-query-tuning-example.asciidoc
@@ -9,8 +9,8 @@ As with the basic query tuning example <<cypherdoc-basic-query-tuning-example>> 
 //setup
 [source,cypher]
 ----
-LOAD CSV WITH HEADERS FROM "movies.csv" AS line
-MERGE (m:Movie {title:line.title})
+LOAD CSV WITH HEADERS FROM 'movies.csv' AS line
+MERGE (m:Movie {title: line.title})
 ON CREATE SET m.released = toInt(line.released), m.tagline = line.tagline
 ----
 
@@ -18,18 +18,18 @@ ON CREATE SET m.released = toInt(line.released), m.tagline = line.tagline
 [source,cypher]
 ----
 LOAD CSV WITH HEADERS FROM 'actors.csv' AS line
-MATCH (m:Movie {title:line.title})
-MERGE (p:Person {name:line.name})
+MATCH (m:Movie {title: line.title})
+MERGE (p:Person {name: line.name})
 ON CREATE SET p.born = toInt(line.born)
-MERGE (p)-[:ACTED_IN {roles:split(line.roles,";")}]->(m)
+MERGE (p)-[:ACTED_IN {roles: split(line.roles,';')}]->(m)
 ----
 
 //setup
 [source,cypher]
 ----
 LOAD CSV WITH HEADERS FROM 'directors.csv' AS line
-MATCH (m:Movie {title:line.title})
-MERGE (p:Person {name:line.name})
+MATCH (m:Movie {title: line.title})
+MERGE (p:Person {name: line.name})
 ON CREATE SET p.born = toInt(line.born)
 MERGE (p)-[:DIRECTED]->(m)
 ----
