--- a/manual/cypher/cypher-docs/src/docs/graphgists/sql/cypher-vs-sql.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/graphgists/sql/cypher-vs-sql.asciidoc
@@ -16,24 +16,24 @@ Here's an entity-relationship model for the example:
 "Person" -> "Movie" [label="produced" arrowhead="crow" arrowtail="crow" dir="both"]
 ----
 
-We have +Person+ and +Movie+ entities, which are related in three different ways, each of which have many-to-many cardinality.
+We have `Person` and `Movie` entities, which are related in three different ways, each of which have many-to-many cardinality.
 
 In a RDBMS we would use tables for the entities as well as for the associative entities (join tables) needed.
 In this case we decided to go with the following tables:
-+movie+, +person+, +acted_in+, +directed+, +produced+.
+`movie`, `person`, `acted_in`, `directed`, `produced`.
 You'll find the SQL for this below.
 
 In Neo4j, the basic data units are nodes and relationships.
 Both can have properties, which correspond to attributes in a RDBMS.
 
 Nodes can be grouped by putting labels on them.
-In the example, we will use the labels +Movie+ and +Person+.
+In the example, we will use the labels `Movie` and `Person`.
 
 When using Neo4j, related entities can be represented directly by using relationships.
 There's no need to deal with foreign keys to handle the relationships, the database will take care of such mechanics.
 Also, the relationships always have full referential integrity.
 There are no constraints to enable for this, as it's not optional; it's really part of the underlying data model.
-Relationships always have a type, and we will differentiate the different kinds of relationships by using the types +ACTED_IN+, +DIRECTED+, +PRODUCED+.
+Relationships always have a type, and we will differentiate the different kinds of relationships by using the types `ACTED_IN`, `DIRECTED`, `PRODUCED`.
 
 == Sample Data ==
 
@@ -119,7 +119,7 @@ Doing this in Neo4j will look quite different.
 To begin with, we won't create any schema up front.
 We'll come back to schema later, for now it's enough to know that labels can be used right away without declaring them.
 
-In the +CREATE+ statements below, we tell Neo4j what data we want to have in the graph.
+In the `CREATE` statements below, we tell Neo4j what data we want to have in the graph.
 Simply put, the parentheses denote nodes, while the arrows (`-->`, or in our case with a relationship type included `-[:DIRECTED]->`) denote relationships.
 For the nodes we set variables like `TheMatrix` so we can easily refer to them later on in the statement.
 Note that the variables are scoped to the statement, and not visible to other Cypher statements.
@@ -127,14 +127,14 @@ We could use variables for the relationships as well, but there's no need for th
 
 [source,cypher]
 ----
-CREATE (TheMatrix:Movie {title:'The Matrix', released:1999, tagline:'Welcome to the Real World'})
-CREATE (Keanu:Person    {name:'Keanu Reeves',       born:1964})
-CREATE (Carrie:Person   {name:'Carrie-Anne Moss',   born:1967})
-CREATE (Laurence:Person {name:'Laurence Fishburne', born:1961})
-CREATE (Hugo:Person     {name:'Hugo Weaving',       born:1960})
-CREATE (AndyW:Person    {name:'Andy Wachowski',     born:1967})
-CREATE (LanaW:Person    {name:'Lana Wachowski',     born:1965})
-CREATE (JoelS:Person    {name:'Joel Silver',        born:1952})
+CREATE (TheMatrix:Movie {title: 'The Matrix', released: 1999, tagline: 'Welcome to the Real World'})
+CREATE (Keanu:Person    {name: 'Keanu Reeves',       born: 1964})
+CREATE (Carrie:Person   {name: 'Carrie-Anne Moss',   born: 1967})
+CREATE (Laurence:Person {name: 'Laurence Fishburne', born: 1961})
+CREATE (Hugo:Person     {name: 'Hugo Weaving',       born: 1960})
+CREATE (AndyW:Person    {name:'Andy Wachowski',     born: 1967})
+CREATE (LanaW:Person    {name: 'Lana Wachowski',     born: 1965})
+CREATE (JoelS:Person    {name: 'Joel Silver',        born: 1952})
 CREATE
   (Keanu)    -[:ACTED_IN {roles:['Neo']}]->         (TheMatrix),
   (Carrie)   -[:ACTED_IN {roles:['Trinity']}]->     (TheMatrix),
@@ -143,11 +143,11 @@ CREATE
   (AndyW)    -[:DIRECTED]->    (TheMatrix),
   (LanaW)    -[:DIRECTED]->    (TheMatrix),
   (JoelS)    -[:PRODUCED]->    (TheMatrix)
-CREATE (TheDevilsAdvocate:Movie {title:"The Devil's Advocate", released:1997, tagline: 'Evil has its winning ways'})
+CREATE (TheDevilsAdvocate:Movie {title: "The Devil's Advocate", released: 1997, tagline: 'Evil has its winning ways'})
 CREATE (Monster:Movie {title: 'Monster', released: 2003, tagline: 'The first female serial killer of America'})
-CREATE (Charlize:Person {name:'Charlize Theron', born:1975})
-CREATE (Al:Person       {name:'Al Pacino',       born:1940})
-CREATE (Taylor:Person   {name:'Taylor Hackford', born:1944})
+CREATE (Charlize:Person {name: 'Charlize Theron', born: 1975})
+CREATE (Al:Person       {name: 'Al Pacino',       born: 1940})
+CREATE (Taylor:Person   {name: 'Taylor Hackford', born: 1944})
 CREATE
   (Keanu)    -[:ACTED_IN {roles:['Kevin Lomax']}]->    (TheDevilsAdvocate),
   (Charlize) -[:ACTED_IN {roles:['Mary Ann Lomax']}]-> (TheDevilsAdvocate),
@@ -160,7 +160,7 @@ CREATE
 
 == Simple read of data ==
 
-Let's find all entries in the +movie+ table and output their +title+ attribute in our RDBMS:
+Let's find all entries in the `movie` table and output their `title` attribute in our RDBMS:
 
 [source,sql]
 ----
@@ -170,7 +170,7 @@ FROM movie;
 
 //sqltable
 
-Using Neo4j, find all nodes labeled +Movie+ and output their +title+ property:
+Using Neo4j, find all nodes labeled `Movie` and output their `title` property:
 
 [source,cypher]
 ----
@@ -180,10 +180,10 @@ RETURN movie.title;
 
 // table
 
-+MATCH+ tells Neo4j to match a pattern in the graph.
-In this case the pattern is very simple: any node with a +Movie+ label on it.
-We bind the result of the pattern matching to the variable `movie`, for use in the +RETURN+ clause.
-And as you can see, the +RETURN+ keyword of Cypher is similar to +SELECT+ in SQL.
+`MATCH` tells Neo4j to match a pattern in the graph.
+In this case the pattern is very simple: any node with a `Movie` label on it.
+We bind the result of the pattern matching to the variable `movie`, for use in the `RETURN` clause.
+And as you can see, the `RETURN` keyword of Cypher is similar to `SELECT` in SQL.
 
 
 [source,querytest]
@@ -223,7 +223,7 @@ Matrix
 Monster
 ----
 
-Note however that the semantics of +WHERE+ in Cypher is somewhat different, see <<query-where>> for more information.
+Note however that the semantics of `WHERE` in Cypher is somewhat different, see <<query-where>> for more information.
 
 == Join ==
 
@@ -247,7 +247,7 @@ MATCH (person:Person)-[:ACTED_IN]->(movie:Movie)
 RETURN person.name, movie.title;
 ----
 
-Here we match a +Person+ and a +Movie+ node, in case they are connected with an +ACTED_IN+ relationship.
+Here we match a `Person` and a `Movie` node, in case they are connected with an `ACTED_IN` relationship.
 
 [source,querytest]
 ----
@@ -257,7 +257,7 @@ Here we match a +Person+ and a +Movie+ node, in case they are connected with an 
 // table
 
 To make things slightly more complex, let's search for the co-actors of Keanu Reeves.
-In SQL we use a self join on the +person+ table and join on the +acted_in+ table once for Keanu, and once for the co-actors.
+In SQL we use a self join on the `person` table and join on the `acted_in` table once for Keanu, and once for the co-actors.
 
 [source,sql]
 ----
@@ -272,7 +272,7 @@ WHERE keanu.name = 'Keanu Reeves';
 
 //sqltable
 
-In Cypher, we use a pattern with two paths that target the same +Movie+ node.
+In Cypher, we use a pattern with two paths that target the same `Movie` node.
 
 [source,cypher]
 ----
@@ -288,8 +288,8 @@ RETURN DISTINCT coActor.name;
 ----
 
 You may have noticed that we used the `co_actor.id <> keanu.id` predicate in SQL only.
-This is because Neo4j will only match on the +ACTED_IN+ relationship once in the same pattern.
-If this is not what we want, we can split the pattern up by using two +MATCH+ clauses like this:
+This is because Neo4j will only match on the `ACTED_IN` relationship once in the same pattern.
+If this is not what we want, we can split the pattern up by using two `MATCH` clauses like this:
 
 [source,cypher]
 ----
